<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home_icon"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/search_icon"
            android:title="@string/search" />
        <item
            android:id="@+id/nav_categories"
            android:icon="@drawable/category_icon"
            android:title="@string/all_categories" />
        <item
            android:id="@+id/nav_add_room"
            android:icon="@drawable/add_room_icon"
            android:title="@string/add_room" />


    </group>

    <item android:title="Profile">

        <menu>

            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_login"
                    android:icon="@drawable/login_icon"
                    android:title="@string/home" />
                <item
                    android:id="@+id/nav_profile"
                    android:icon="@drawable/home_icon"
                    android:title="@string/profile" />
                <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/logout_icon"
                    android:title="@string/logout" />


            </group>

        </menu>


    </item>

    <item android:title="Categories">
        <menu>

            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_restaurants"
                    android:icon="@drawable/restaurant_48px"
                    android:title="@string/restaurants" />
                <item
                    android:id="@+id/nav_banks"
                    android:icon="@drawable/bank_icon"
                    android:title="@string/banks" />
                <item
                    android:id="@+id/nav_education"
                    android:icon="@drawable/education_50px"
                    android:title="@string/education" />
                <item
                    android:id="@+id/nav_shop"
                    android:icon="@drawable/shop_48px"
                    android:title="@string/shops" />


            </group>

        </menu>


    </item>

    <item android:title="Share">
        <menu>

            <group android:checkableBehavior="none">
                <item
                    android:id="@+id/nav_share"
                    android:icon="@drawable/share_icon"
                    android:title="@string/share" />
                <item
                    android:id="@+id/nav_rate_us"
                    android:icon="@drawable/rate_us"
                    android:title="@string/rate_us" />


            </group>

        </menu>


    </item>

</menu>